--- a/widgets_app/pubspec.yaml
+++ b/widgets_app/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
   go_router: ^14.1.4
 
 dev_dependencies:
