--- a/push_app/pubspec.yaml
+++ b/push_app/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   equatable: ^2.0.5
+  firebase_core: ^3.2.0
+  firebase_messaging: ^15.0.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
